--- a/Ludum Dare 47 HTML/index.html
+++ b/Ludum Dare 47 HTML/index.html
@@ -29,5 +29,7 @@
 	<script src="scripts/offlineclient.js"></script>
 	<script src="scripts/main.js"></script>
 	<script src="scripts/register-sw.js"></script>
+
+	<a href=""><button></button></a>
 </body>
 </html>
