--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Github Page</title>
+    <title>Rintaro's Github Page</title>
 </head>
 <body>
-    Github
+    <a href="PPP/index.html">Procrastination Prevention Planner</a>
 </body>
 </html>
