Okay looking website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Rintaro's Github Page</title>
-</head>
-<body>
-    <a href="PPP/index.html">Procrastination Prevention Planner</a>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>OuterSoda's Github</title>
+        <script src="https://kit.fontawesome.com/b5bd48cb53.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="grid">
+
+            <!-- NAVBAR -->
+
+            <div class="gbox"><div class="box" id="nl">
+                <h1 style="text-align:center;">OUTERSODA'S GITHUB</h1>
+            </div></div>
+
+            <div class="gbox"><div class="box flex" id="nr">
+                <div class="ilb pfp">
+                    <img src="https://avatars.githubusercontent.com/u/72418058" style="width:9vmin;border-radius:50%;"/>
+                    <div class="sns-icons">
+                        <a class="fai fa-brands fa-itch-io fa-2xl" href="https://outersoda.itch.io/"></a>
+                        <a class="fai fa-brands fa-github fa-2xl" href="https://github.com/OuterSoda"></a>
+                        <a class="fai fa-brands fa-reddit fa-2xl" href="https://www.reddit.com/user/OuterSoda"></a>
+                        <a class="fai fa-brands fa-stack-overflow fa-2xl" href="https://stackoverflow.com/users/19922257/outersoda"></a>
+                        <a class="fai fa-brands fa-spotify fa-2xl" href="https://open.spotify.com/user/31dpj7a2rzvrunclgj75wghix4iq"></a>
+                        <a class="fai fa-brands fa-youtube fa-2xl" href="https://www.youtube.com/channel/UCNVAJ_1oyHmxigDkiM5H8bA"> </a>
+                    </div>
+                </div>
+                <div class="onevminwide"></div>
+                <div class="pfp-filler"></div>
+                <div class="onevminwide"></div>
+                <div class="ilb flex-width">
+                    &nbsp;&nbsp;Hello I'm a human being living on Earth <br>
+                    &nbsp;&nbsp;I like science, math, and computer science <br>
+                    &nbsp;&nbsp;I firmly believe US spelling is better than UK spelling <br>
+                    &nbsp;&nbsp;Also hexagons are the bestagons
+                </div>
+            </div></div>
+
+            <!-- BODY -->
+
+            <div class="gbox"><div class="box" id="tl">
+                <h1>I can't think of anything to put here</h1>
+            </div></div>
+
+            <div class="gbox"><div class="box" id="tr">
+                <iframe frameborder="0" src="https://itch.io/embed/1656433?dark=true" width="100%" height="167"><a href="https://outersoda.itch.io/bounty-boss">Bounty Boss by OuterSoda, ConstantDerivative</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/1011792?dark=true" width="100%" height="167"><a href="https://outersoda.itch.io/refrigerator-rampage">Refrigerator Rampage by OuterSoda</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/1082262?dark=true" width="100%" height="167"><a href="https://outersoda.itch.io/children-overseer">Children Overseer by OuterSoda</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/1039346?dark=true" width="100%" height="167"><a href="https://outersoda.itch.io/toms-tennis-balls">Tom`s Tennis Balls by OuterSoda</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/1033432?dark=true" width="100%   " height="167"><a href="https://outersoda.itch.io/stuck-in-a-hula-loop">Stuck in a Hula Loop by OuterSoda</a></iframe>
+            </div></div>
+
+            <div class="gbox"><div class="box calendar" id="bl">
+                Hello
+            </div></div>
+
+            <div class="gbox"><div class="box" id="br">
+                asdfkemo
+            </div></div>
+        </div>
+        <script src="script.js"></script>
+    </body>
 </html>
